--- a/index.html
+++ b/index.html
@@ -55,6 +55,21 @@
 
 
         <footer>
+            <div class="logo-p">
+                <h4>Pic View</h4>
+                <p>Desarollado por Lancer</p>
+                <h4>Sobre Nosotros</h4>
+                <p>En nuestra página, encontrarás una
+                    amplia comunidad de creativos y entusiastas de la fotografía, podrás seguir a tus
+                    artistas favoritos y recibir notificaciones sobre sus últimas creaciones.</p>
+            </div>
+            <div class="socials">
+                <h3>Socials</h3>
+                <a href="#">a</a>
+                <a href="#">a</a>
+                <a href="#">a</a>
+                <a href="#">a</a>
+            </div>
 
 
         </footer>
